# nes

./: Cargo.toml  README.md  nes.sln
.github/workflows/: rust_build.yml
cpp/cppnes/: cppnes.vcxproj  cppnes.vcxproj.filters  cpu.h
cpp/cppnes/Debug/: vc142.idb
cpp/cppnes/Debug/cppnes.tlog/: cppnes.lastbuildstate
cpp/olc/: olc.vcxproj  olc.vcxproj.filters
src/: cpu.rs  main.rs
src/olc/: olc6502.h
src/rustnes/: Cargo.toml  imgui.ini  nes.sln
src/rustnes/src/: app.rs  bus.rs  cpu.rs  main.rs  memory.rs  nes.rs
src/rustnes/src/graphics/: app.rs  canvas.rs  debugwindow.rs  imgui_wrapper.rs  mod.rs  neswindow.rs  opengl.rs
src/rustnes/src/hardware/: cpu.rs  mod.rs
