[package]
name = "abaraad"
version = "0.1.0"
authors = ["Frank van der Stam <f.stam@vlastuin.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.glfw]
git = "https://github.com/bjz/glfw-rs.git"
default-features = true