[package]
name = "rustnes"
version = "0.1.0"
authors = ["Frank van der Stam <frank_stam5@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.2"

ggez = "0.5.1"

gfx_core = "0.9.1"
gfx_device_gl = "0.16.2"

imgui = "0.2.1"
imgui-gfx-renderer = "0.2.0"