[package]
name = "rustnes"
version = "0.1.0"
authors = ["Frank van der Stam <f.stam@vlastuin.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
glium = "0.25.0"
imgui = "0.2.0"
imgui-glium-renderer = "0.2.0"
imgui-winit-support = "0.2.0"
